# socialranking-python

./: .gitignore  README.md  library_skeleton_animation.tex  library_skeleton_log.tex  pyproject.toml
src/socialranking/: __init__.py  helpers.py  power_relation.py  rankings.py  social_ranking.py
tests/: test_helpers.py  test_package_import.py  test_power_relation.py  test_rankings.py  test_social_ranking.py
tests/tests/: test_power_relation.py
